results/SVCOMP/4-shot/log-ExSymExe21-2024_03_18_19_16_08.txt
class Main {
  static int field;
  static int field2;

  //@ requires \symbolic int x;
  //@ ensures \result == true <==> x >= x - 3 - 4;
  public static boolean f() {
    int x = 3; /* we want to specify in an annotation that this param should be symbolic */

    Main inst = new Main();
    field = 9;
    return inst.test(x, field, field2);
  }

  //@ requires \symbolic int x;
  //@ requires \symbolic int z;
  //@ requires \symbolic int r;
  //@ ensures \result == true <==> x >= z;
  public boolean test(int x, int z, int r) {
    System.out.println("Testing ExSymExe21");
    int y = 3;
    r = x + z;
    z = x - y - 4;
    if (r >= 99) System.out.println("branch FOO1");
    else System.out.println("branch FOO2");
    if (x >= z) System.out.println("branch BOO1");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe21.java:5: error: This backslash token is unknown: \symbolic
  //@ requires \symbolic int x;
               ^
/home/max/Documents/JMLGPT/tmp/ExSymExe21.java:15: error: This backslash token is unknown: \symbolic
  //@ requires \symbolic int x;
               ^
/home/max/Documents/JMLGPT/tmp/ExSymExe21.java:16: error: This backslash token is unknown: \symbolic
  //@ requires \symbolic int z;
               ^
/home/max/Documents/JMLGPT/tmp/ExSymExe21.java:17: error: This backslash token is unknown: \symbolic
  //@ requires \symbolic int r;
               ^
4 errors

